gaps fixed in intro, cards

--- a/media/css/cms/flare26-article.css
+++ b/media/css/cms/flare26-article.css
@@ -98,8 +98,12 @@ Stacked article list
 .fl-stacked-article-list .fl-article-item {
     border-block-start: 1px solid var(--token-color-soft-purple);
     display: grid;
-    gap: var(--token-spacing-lg);
-    padding-block: var(--token-spacing-2xl);
+    gap: var(--token-spacing-sm);
+    padding-block: var(--token-spacing-xl);
+}
+
+.fl-article-item-description p:last-child {
+    margin-block-end: 0;
 }
 
 .fl-article-item-header {
