--- a/media/css/cms/pages/flare26-smart-window.css
+++ b/media/css/cms/pages/flare26-smart-window.css
@@ -31,6 +31,10 @@
     gap: var(--token-spacing-md);
 }
 
+.fl-smart-window-instructions-container p {
+    margin: 0;
+}
+
 .fl-smart-window-heading-success {
     display: none;
 }
@@ -47,71 +51,15 @@
     display: none;
 }
 
-@media (--viewport-md-up) {
-    .fl-smart-window-explainer-page .fl-header .fl-nav {
-        background: transparent;
-    }
-
-    .fl-smart-window-page
-        .fl-card-grid:has(
-            .fl-illustration-card-default:nth-child(3):last-child
-        ),
-    .fl-smart-window-page
-        .fl-card-grid:has(
-            > *:nth-child(3):last-child .fl-illustration-card-default
-        ) {
-        max-inline-size: var(--token-width-desktop-wide-banner);
-    }
-
-    .fl-newsletterform.fl-smart-window-form {
-        flex-direction: row;
-        gap: 0;
-        inline-size: 480px;
-        margin-block-end: var(--token-spacing-2xl);
-        max-inline-size: 100%;
-        position: relative;
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-input {
-        border-radius: var(--token-border-radius-xl);
-        margin-block-end: 0;
-        padding-inline: var(--token-spacing-lg) 200px;
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-button {
-        inline-size: auto;
-        inset-block-start: 0;
-        inset-inline-end: -0.5px;
-        margin-inline-start: -36px;
-        position: absolute;
-        z-index: 1;
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-details {
-        inset-block-start: 100%;
-        padding-block-start: var(--token-spacing-lg);
-        position: absolute;
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-checkbox-label {
-        align-items: center;
-        gap: var(--token-spacing-sm);
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-checkbox-text p {
-        font-size: var(--fl-theme-font-size-body-2xs);
-        margin: var(--token-spacing-xs) 0 0 0;
-    }
-
-    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-error {
-        background: var(--fl-theme-background);
-        inset-block-start: 100%;
-        position: absolute;
-    }
-}
-
 .fl-smart-window-explainer-page .fl-header {
     background: transparent;
+}
+
+.fl-smart-window-intro-content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: var(--token-layout-2xs);
 }
 
 .fl-smart-window-intro {
@@ -127,7 +75,12 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    gap: var(--token-spacing-xl);
     max-inline-size: var(--token-width-desktop-content-lg);
+}
+
+.fl-smart-window-intro .fl-heading {
+    margin: 0;
 }
 
 .fl-smart-window-intro .fl-subheading {
@@ -199,4 +152,89 @@
 .fl-smart-window-page .fl-video-play-icon path,
 .fl-smart-window-explainer-page .fl-video-play-icon path {
     fill: var(--smart-window-play-icon-fill-color);
+}
+
+@media (--viewport-md-up) {
+    .fl-smart-window-instructions-container {
+        gap: var(--token-spacing-xl);
+    }
+
+    .fl-smart-window-intro .fl-heading-group {
+        gap: var(--token-layout-xs);
+    }
+
+    .fl-smart-window-explainer-page .fl-header .fl-nav {
+        background: transparent;
+    }
+
+    .fl-smart-window-page
+        .fl-card-grid:has(
+            .fl-illustration-card-default:nth-child(3):last-child
+        ),
+    .fl-smart-window-page
+        .fl-card-grid:has(
+            > *:nth-child(3):last-child .fl-illustration-card-default
+        ) {
+        max-inline-size: var(--token-width-desktop-wide-banner);
+    }
+
+    .fl-newsletterform.fl-smart-window-form {
+        flex-direction: row;
+        gap: 0;
+        inline-size: 480px;
+        margin-block-end: var(--token-spacing-2xl);
+        max-inline-size: 100%;
+        position: relative;
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-input {
+        border-radius: var(--token-border-radius-xl);
+        margin-block-end: 0;
+        padding-inline: var(--token-spacing-lg) 200px;
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-button {
+        inline-size: auto;
+        inset-block-start: 0;
+        inset-inline-end: -0.5px;
+        margin-inline-start: -36px;
+        position: absolute;
+        z-index: 1;
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-details {
+        inset-block-start: 100%;
+        padding-block-start: var(--token-spacing-lg);
+        position: absolute;
+    }
+
+    .fl-newsletterform.fl-smart-window-form:has(
+            .fl-newsletterform-error:not(.hidden)
+        )
+        .fl-newsletterform-details {
+        inset-block-start: calc(100% + 16px);
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-checkbox-label {
+        align-items: center;
+        gap: var(--token-spacing-sm);
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-checkbox-text p {
+        font-size: var(--fl-theme-font-size-body-2xs);
+        margin: var(--token-spacing-xs) 0 0 0;
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-error {
+        background: var(--fl-theme-background);
+        inset-block-start: 100%;
+        position: absolute;
+    }
+
+    .fl-newsletterform.fl-smart-window-form .fl-newsletterform-error-list {
+        font-size: 12px;
+        padding-block: 4px;
+        padding-inline-start: 0;
+        text-align: start;
+    }
 }
